...
                        FilledButton(
                          onPressed: widget.settings.maintenanceMode
                              ? null
                              : () {
                                  _openPharmacyMode();
                                },
                          child: const Text('Iniciar Modo Farmácia'),
                        ),
                      ],
                    ),
                  ],
                ),
              ),
...
