...
                listener: (context, state) {
                  _eanController.clear();
                  FocusScope.of(context).unfocus();

                  ScaffoldMessenger.of(
                    context,
                  ).showSnackBar(const SnackBar(content: Text('Medicamento adicionado à compra.')));
                },
                builder: (context, state) {
                  return MedicationCounterContent(
                    medicationLabel: state.medicationLabel,
                    medicationCount: state.medicationCount,
                    primaryAction: state.primaryAction,
...
